package daw.pr.minesweeper.struct;

public enum StateCanvas {
    HIDDEN,
    REVEALED,
    FLAGGED,
    MARKED,
    QUESTIONED
}
