package daw.pr.minesweeper.struct;

public interface debug {
    // --Commented out by Inspection (04/04/2023 11:34):Logger LOGGER = LoggerFactory.getLogger(debug.class);

    @Override
    String toString();
}
