package daw.pr.minesweeper.struct;

public interface gameplay {
    void rightClick(Cell cell);

    void leftClick(Cell cell);
}
